- favorite functionality added without persistence - vm factory moved out to class - packages created and classes moved to the related packages

--- a/app/src/main/res/layout/item_repository_list.xml
+++ b/app/src/main/res/layout/item_repository_list.xml
@@ -6,7 +6,7 @@
 
 		<variable
 			name="item"
-			type="me.yasinarslan.githubapi.presentation.ListItem" />
+			type="me.yasinarslan.githubapi.presentation.list.ListItem" />
 
 	</data>
 
