--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -26,7 +26,7 @@
 			<com.google.android.material.textfield.TextInputEditText
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:hint="@string/app_name"
+				android:hint="@string/hint_search"
 				android:text="@={vm.searchText}" />
 
 		</com.google.android.material.textfield.TextInputLayout>
@@ -38,7 +38,7 @@
 			android:layout_marginTop="16dp"
 			android:layout_marginEnd="16dp"
 			android:onClick="@{() -> vm.search()}"
-			android:text="Search" />
+			android:text="@string/action_search" />
 
 		<androidx.recyclerview.widget.RecyclerView
 			android:id="@+id/repository_list"
