--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -24,6 +24,7 @@
 			app:hintEnabled="false">
 
 			<com.google.android.material.textfield.TextInputEditText
+				android:id="@+id/searchBar"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:hint="@string/hint_search"
@@ -32,6 +33,7 @@
 		</com.google.android.material.textfield.TextInputLayout>
 
 		<Button
+			android:id="@+id/searchButton"
 			android:layout_width="108dp"
 			android:layout_height="54dp"
 			android:layout_gravity="end"
